# Casino_game_upgradation_web3

./: .env  .gitignore  README.md  hardhat.config.cjs  package-eth.json  package-lock.json  package.json  solana_fixes.md  test_report.md
contracts/ethereum/: CasinoGame.sol  README.md  deploy.js  hardhat.config.cjs  package-lock.json  package.json
contracts/ethereum/contracts/: RouletteGame.sol
contracts/ethereum/mocks/: MockVRFCoordinator.sol  ReentrancyAttacker.sol
contracts/ethereum/test/: CasinoGame.test.js  (+2 more)
contracts/solana/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  LOCAL_VALIDATOR_SETUP.md  README.md  run_tests.ps1  run_tests.sh
contracts/solana/js/: casino-client.js  example.js  package.json
contracts/solana/src/: client.rs  edge_cases_test.rs  lib.rs  security_test.rs  test.rs  tokio_tests.rs
ethereum/mocks/: MockVRFCoordinator.sol  ReentrancyAttacker.sol
ethereum/test/: CasinoGame.security.test.js  RandomnessProvider.security.test.js
mocks/: MockRandomnessProvider.sol  MockVRFCoordinator.sol
scripts/: deploy.js  interact.js  verify.js
test/: CasinoGame.hardhat.test.js  CasinoGame.security.test.js  RandomnessProvider.hardhat.test.js  RandomnessProvider.security.test.js  basic.test.js  ethereum-contracts.test.js  ethereum-security-summary.md  ethereum-tests.js  security-report.md  simple.test.js  solana-security-summary.md
test/ethereum/: CasinoGame.security.test.js  CasinoGame.test.js  RandomnessProvider.security.test.js  RandomnessProvider.test.js
test/mocks/: MockRandomnessProvider.sol  ReentrancyAttacker.sol  UpgradedRandomnessProvider.sol
(+7 files in other folders)
