[package]
name = "casino-game"
version = "0.1.0"
edition = "2021"
description = "Solana program for the Casino Game platform"
authors = ["Casino Game Team"]
license = "ISC"

[lib]
crate-type = ["cdylib", "lib"]
name = "casino_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.40"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
arrayref = "0.3.7"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.28.0", features = ["full"] }
assert_matches = "1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3 